host/macro/tests/ui/string_arguments.stderr
error: requires at least a string template
 --> tests/ui/string_arguments.rs:1:1
  |
1 | js_bindgen::unsafe_embed_asm!();
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `js_bindgen::unsafe_embed_asm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: requires at least a string template
 --> tests/ui/string_arguments.rs:4:31
  |
4 | js_bindgen::unsafe_embed_asm!(42);
  |                               ^^

error: escaping `r` is not supported
 --> tests/ui/string_arguments.rs:7:31
  |
7 | js_bindgen::unsafe_embed_asm!("\r");
  |                               ^^^^

error: expected a `,` after string literal
  --> tests/ui/string_arguments.rs:10:34
   |
10 | js_bindgen::unsafe_embed_asm!("" 42);
   |                                  ^^

error: requires at least a string template
  --> tests/ui/string_arguments.rs:13:31
   |
13 | js_bindgen::unsafe_embed_asm!(.);
   |                               ^

error: expected `#[...]`
  --> tests/ui/string_arguments.rs:16:31
   |
16 | js_bindgen::unsafe_embed_asm!(#);
   |                               ^

error: expected `#[...]`
  --> tests/ui/string_arguments.rs:19:31
   |
19 | js_bindgen::unsafe_embed_asm!(#foo);
   |                               ^^^^

error: expected `#[...]`
  --> tests/ui/string_arguments.rs:22:31
   |
22 | js_bindgen::unsafe_embed_asm!(#());
   |                               ^^^

error: expected `cfg`
  --> tests/ui/string_arguments.rs:25:33
   |
25 | js_bindgen::unsafe_embed_asm!(#[foo]);
   |                                 ^^^

error: multiple `cfg`s in a row not supported
  --> tests/ui/string_arguments.rs:29:2
   |
29 | /     #[cfg()]
30 | |     #[cfg()]
   | |____________^

error: expected `cfg`
  --> tests/ui/string_arguments.rs:34:33
   |
34 | js_bindgen::unsafe_embed_asm!(#[test]);
   |                                 ^^^^

error: leftover `cfg` attribute
  --> tests/ui/string_arguments.rs:37:31
   |
37 | js_bindgen::unsafe_embed_asm!(#[cfg()]);
   |                               ^^^^^^^^

error: no corresponding closing bracers found
  --> tests/ui/string_arguments.rs:40:31
   |
40 | js_bindgen::unsafe_embed_asm!("{}}");
   |                               ^^^^^

error: expected a value
  --> tests/ui/string_arguments.rs:43:37
   |
43 | js_bindgen::unsafe_embed_asm!("{}", foo);
   |                                     ^^^

error: expected a value
  --> tests/ui/string_arguments.rs:46:37
   |
46 | js_bindgen::unsafe_embed_asm!("{}", interpolate);
   |                                     ^^^^^^^^^^^

error: expected `const` or `interpolate`
  --> tests/ui/string_arguments.rs:49:37
   |
49 | js_bindgen::unsafe_embed_asm!("{}", foo "test");
   |                                     ^^^

error: expected a value
  --> tests/ui/string_arguments.rs:52:49
   |
52 | js_bindgen::unsafe_embed_asm!("{}", interpolate #);
   |                                                 ^

error: type not completed, missing `>`
  --> tests/ui/string_arguments.rs:55:49
   |
55 | js_bindgen::unsafe_embed_asm!("{}", interpolate < Foo);
   |                                                 ^^^^^

error: expected a value
  --> tests/ui/string_arguments.rs:58:48
   |
58 | js_bindgen::unsafe_embed_asm!("{}", interpolate,);
   |                                                ^

error: expected a `,` between formatting parameters
  --> tests/ui/string_arguments.rs:61:53
   |
61 | js_bindgen::unsafe_embed_asm!("{}", interpolate Foo $);
   |                                                     ^

error: expected an argument for `{}`
  --> tests/ui/string_arguments.rs:64:31
   |
64 | js_bindgen::unsafe_embed_asm!("{}");
   |                               ^^^^

error: expected an argument for `{}`
  --> tests/ui/string_arguments.rs:67:37
   |
67 | js_bindgen::unsafe_embed_asm!("{}", "{}", interpolate "test",);
   |                                     ^^^^

error: no corresponding closing bracers found
  --> tests/ui/string_arguments.rs:70:31
   |
70 | js_bindgen::unsafe_embed_asm!("{");
   |                               ^^^

error: no corresponding opening bracers found
  --> tests/ui/string_arguments.rs:73:31
   |
73 | js_bindgen::unsafe_embed_asm!("}");
   |                               ^^^

error: expected named argument, `const` or `interpolate`
  --> tests/ui/string_arguments.rs:76:35
   |
76 | js_bindgen::unsafe_embed_asm!("", 42);
   |                                   ^^

error: expected `cfg`
  --> tests/ui/string_arguments.rs:79:36
   |
79 | js_bindgen::unsafe_embed_asm!("", #[] );
   |                                    ^^

error: leftover `cfg` attribute
  --> tests/ui/string_arguments.rs:82:35
   |
82 | js_bindgen::unsafe_embed_asm!("", #[cfg()] );
   |                                   ^^^^^^^^

error: expected named argument, `const` or `interpolate`
  --> tests/ui/string_arguments.rs:85:44
   |
85 | js_bindgen::unsafe_embed_asm!("", #[cfg()] $ );
   |                                            ^

error: expected `cfg`
  --> tests/ui/string_arguments.rs:91:4
   |
91 |     #[test]
   |       ^^^^

error: multiple `cfg`s in a row not supported
  --> tests/ui/string_arguments.rs:97:2
   |
97 | /     #[cfg()]
98 | |     #[cfg()]
   | |____________^

error: expected `cfg`
   --> tests/ui/string_arguments.rs:102:59
    |
102 | js_bindgen::unsafe_embed_asm!("{}", interpolate "test", #[test] );
    |                                                           ^^^^

error: leftover `cfg` attribute
   --> tests/ui/string_arguments.rs:105:57
    |
105 | js_bindgen::unsafe_embed_asm!("{}", interpolate "test", #[cfg()] );
    |                                                         ^^^^^^^^

error: expected named argument, `const` or `interpolate`
   --> tests/ui/string_arguments.rs:108:66
    |
108 | js_bindgen::unsafe_embed_asm!("{}", interpolate "test", #[cfg()] $ );
    |                                                                  ^

error: expected `cfg`
   --> tests/ui/string_arguments.rs:115:4
    |
115 |     #[test]
    |       ^^^^

error: multiple `cfg`s in a row not supported
   --> tests/ui/string_arguments.rs:122:2
    |
122 | /     #[cfg()]
123 | |     #[cfg()]
    | |____________^

error: expected `const` or `interpolate`
   --> tests/ui/string_arguments.rs:127:43
    |
127 | js_bindgen::unsafe_embed_asm!("{}", par = "test");
    |                                           ^^^^^^

error: expected `const` or `interpolate`
   --> tests/ui/string_arguments.rs:130:43
    |
130 | js_bindgen::unsafe_embed_asm!("{}", par = operator "test");
    |                                           ^^^^^^^^

error: named argument must come first
   --> tests/ui/string_arguments.rs:133:57
    |
133 | js_bindgen::unsafe_embed_asm!("{}", interpolate "test", par = interpolate "test");
    |                                                         ^^^

error: found duplicate named argument
   --> tests/ui/string_arguments.rs:136:68
    |
136 | js_bindgen::unsafe_embed_asm!("{par}", par = interpolate "test 1", par = interpolate "test 2");
    |                                                                    ^^^

error: found duplicate named argument
   --> tests/ui/string_arguments.rs:139:86
    |
139 | js_bindgen::unsafe_embed_asm!("{par}", #[cfg()] par = interpolate "test 1", #[cfg()] par = interpolate "test 2");
    |                                                                                      ^^^

error: `cfg` attributes are only supported on named arguments
   --> tests/ui/string_arguments.rs:142:37
    |
142 | js_bindgen::unsafe_embed_asm!("{}", #[cfg()] interpolate "test 1");
    |                                     ^^^^^^^^

error: invalid template string named argument identifier
   --> tests/ui/string_arguments.rs:145:31
    |
145 | js_bindgen::unsafe_embed_asm!("{()}");
    |                               ^^^^^^

error: invalid template string named argument identifier
   --> tests/ui/string_arguments.rs:148:31
    |
148 | js_bindgen::unsafe_embed_asm!("{par()}");
    |                               ^^^^^^^^^

error: this file contains an unclosed delimiter
   --> tests/ui/string_arguments.rs:151:1
    |
151 | js_bindgen::unsafe_embed_asm!("{[}");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unclosed delimiter
    |
    = note: this error originates in the macro `js_bindgen::unsafe_embed_asm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid template string named argument identifier
   --> tests/ui/string_arguments.rs:151:31
    |
151 | js_bindgen::unsafe_embed_asm!("{[}");
    |                               ^^^^^

error: expected a named argument for `par`
   --> tests/ui/string_arguments.rs:155:31
    |
155 | js_bindgen::unsafe_embed_asm!("{par}");
    |                               ^^^^^^^

error: expected no leftover arguments
   --> tests/ui/string_arguments.rs:158:35
    |
158 | js_bindgen::unsafe_embed_asm!("", interpolate "test");
    |                                   ^^^^^^^^^^^^^^^^^^

error: expected no leftover arguments
   --> tests/ui/string_arguments.rs:161:35
    |
161 | js_bindgen::unsafe_embed_asm!("", par = interpolate "test");
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 48 previous errors

